5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1637_2443.log
== TEST (2019-04-15 19:36:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r= float(input("raio:"))
x= float(input("altura:"))
opcao- int(input("numero 1 ou 2:"))
esfera= (4* pi *r**3)/3
calota= (pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(ar,4))
else:
	print(round(comb,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    opcao- int(input())
NameError: name 'opcao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:36:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r= float(input("raio:"))
x= float(input("altura:"))
opcao- int(input("numero 1 ou 2:"))
esfera= (4* pi *r**3)/3
calota= (pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(ar,4))
else:
	print(round(comb,4))

-- EXECUTION TIME:
0.115547
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 7, in <module>
    opcao- int(input())
NameError: name 'opcao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:36:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r= float(input("raio:"))
x= float(input("altura:"))
opcao- int(input("numero 1 ou 2:"))
esfera= (4* pi *r**3)/3
calota= (pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(ar,4))
else:
	print(round(comb,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    opcao- int(input())
NameError: name 'opcao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:37:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r= float(input("raio:"))
x= float(input("altura:"))
opcao= int(input("numero 1 ou 2:"))
esfera= (4* pi *r**3)/3
calota= (pi * x**2 *(3*r-x))/3
comb= esfera-calota
ar=calota
if(opcao==1):
	print(round(ar,4))
else:
	print(round(comb,4))

-- EXECUTION TIME:
0.182528
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
